More CMake cleanup and VS2022 fixes

--- a/Duke4/D3DDrv/Src/CMakeLists.txt
+++ b/Duke4/D3DDrv/Src/CMakeLists.txt
@@ -2,6 +2,10 @@ project(D3DDrv)
 add_library(D3DDrv SHARED Direct3D8.cpp)
 target_link_libraries(D3DDrv PRIVATE Engine)
 
+if (MSVC_VERSION GREATER_EQUAL 1900)
+    target_link_libraries(D3DDrv PRIVATE legacy_stdio_definitions)
+endif()
+
 target_include_directories(D3DDrv PRIVATE
     ${CMAKE_SOURCE_DIR}/Core/Inc
     ${CMAKE_SOURCE_DIR}/Engine/Inc
